--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('style/app.css') }}">
 
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -28,7 +29,7 @@
         <!-- Main Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark  mb-5" style="background-color: #27333A;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{{ path('app_homepage')}}">
                     <i class="fas fa-record-vinyl"></i>
                     Mixed Vinyl
                 </a>
@@ -38,7 +39,7 @@
                 <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" style="margin-top: 20px;" href="#">Browse Mixes</a>
+                            <a class="nav-link" style="margin-top: 20px;" href="{{ path('browse_mixes')}}"">Browse Mixes</a>
                         </li>
                         <!-- Not Authenticated -->
                             <!-- <li class="nav-item"><button href="#" class="btn btn-primary btn-sm">Login</button></li> -->
